--- a/examples/java-maven-h2/pom.xml
+++ b/examples/java-maven-h2/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>io.github.verissimor.lib</groupId>
 			<artifactId>jpa-magic-filter</artifactId>
-			<version>0.0.10-SNAPSHOT</version>
+			<version>0.0.10</version>
 		</dependency>
 
 		<dependency>
