--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-lib:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -44,11 +44,23 @@ jobs:
         name: jacoco-report
         path: target/site/jacoco/
 
+  build-example-maven-java-8:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+          cache: maven
+
     - name: Build Java Example Project with Maven
       working-directory: ./examples/java-maven-h2
       run: mvn -B package --file pom.xml
 
-  buildJava17:
+  build-example-gradle-java-17:
     runs-on: ubuntu-latest
 
     steps:
