--- a/.github/workflows/publish-package-pipeline.yml
+++ b/.github/workflows/publish-package-pipeline.yml
@@ -13,13 +13,13 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v4
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
-          java-version: '8'
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Build with Gradle
         run: ./gradlew build
