chore(spring-v3): add action checkout v3

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -10,6 +10,8 @@ jobs:
   build-lib:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
