--- a/.github/workflows/publish-package-pipeline.yml
+++ b/.github/workflows/publish-package-pipeline.yml
@@ -13,6 +13,8 @@ jobs:
       packages: write
 
     steps:
+      - uses: actions/checkout@v3
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
