--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -10,14 +10,13 @@ jobs:
   build-lib:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
-          java-version: '8'
-          distribution: 'adopt'
-          cache: maven
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Build with Gradle
         run: ./gradlew build
@@ -32,6 +31,7 @@ jobs:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
 
       - name: Commit and push the badge (if it changed)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: EndBug/add-and-commit@v7
         with:
           default_author: github_actions
@@ -44,30 +44,30 @@ jobs:
           name: jacoco-report
           path: target/site/jacoco/
 
-  build-example-maven-java-8:
+#  build-example-maven-java:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Set up JDK
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: maven
+#
+#      - name: Build Java Example Project with Maven
+#        working-directory: ./examples/java-maven-h2
+#        run: mvn -B package --file pom.xml
+
+  build-example-gradle-java:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-          cache: maven
-
-      - name: Build Java Example Project with Maven
-        working-directory: ./examples/java-maven-h2
-        run: mvn -B package --file pom.xml
-
-  build-example-gradle-java-17:
-    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
